--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "vitest": "1.3.0",
     "yeoman-test": ">=8.0.0-rc.1"
   },
-  "peerDependencies": {
+  "acceptDependencies": {
     "generator-jhipster": "^8.1.0"
   },
   "engines": {
