--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "UNLICENSED",
   "type": "module",
   "files": [
-    "generators"
+    "generators",
+    "!**/__*",
+    "!**/*.snap",
+    "!**/*.spec.?(c|m)js"
   ],
   "scripts": {
     "ejslint": "ejslint generators/**/*.ejs",
